RESOLVED FIXED105675
Fix the incorrect use of preprocessor statement in API header
https://bugs.webkit.org/show_bug.cgi?id=105675
Summary Fix the incorrect use of preprocessor statement in API header
Seokju Kwon
Reported 2012-12-21 21:35:50 PST
Remove a preprocessor statement in WKBundlePage.h
Attachments
Patch (2.54 KB, patch)
2012-12-21 22:10 PST, Seokju Kwon
no flags
Seokju Kwon
Comment 1 2012-12-21 22:10:10 PST
WebKit Review Bot
Comment 2 2012-12-23 22:12:18 PST
Comment on attachment 180591 [details] Patch Clearing flags on attachment: 180591 Committed r138434: <http://trac.webkit.org/changeset/138434>
WebKit Review Bot
Comment 3 2012-12-23 22:12:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.