Fix the incorrect use of preprocessor statement in API header https://bugs.webkit.org/show_bug.cgi?id=105675

Patch by Seokju Kwon <seokju.kwon@gmail.com> on 2012-12-23
Reviewed by Sam Weinig.

Remove a preprocessor statement in WKBundlePage.h

* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
(WKBundlePageGetInspector):
* WebProcess/InjectedBundle/API/c/WKBundlePage.h:

Canonical link: https://commits.webkit.org/123918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138434 268f45cc-cd09-0410-ab3c-d52691b4dbfc